# skilljar-agent

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  env.example  mcp_server.py  pyproject.toml
.cursor/: mcp.json
docs/: skilljar-api.yaml
prompts/: batch_create_lessons.md  course_summary.md  create_course.md  create_html_lesson.md  create_lesson.md  curriculum_plan.md
src/cli/: __init__.py
src/core/: __init__.py  cache.py  client.py  models.py
src/tools/analytics/: tools.py
src/tools/classroom/: tools.py
src/tools/content/: tools.py
src/tools/curriculum/: models.py  planner.py  resolver.py  scraper.py  tools.py
src/tools/enrollment/: tools.py
tests/: test_client_scraping_html.py  test_scraper_embeds.py
