[project]
name = "skilljar-agent"
version = "0.2.0"
description = "SkillJar platform agent — curriculum planning, analytics, enrollment, and ILT support"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
# Only needed for standalone CLI mode (not MCP server)
cli = [
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
skilljar-agent = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/tools", "src/cli"]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]